--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,79 +1,53 @@
 name: my_flutter
 description: A new Flutter project.
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#
-# This version is used _only_ for the Runner app, which is used if you just do
-# a `flutter run` or a `flutter make-host-app-editable`. It has no impact
-# on any other native host app that you embed your Flutter project into.
-version: 1.0.0+1
+# Prevent accidental publishing to pub.dev.
+publish_to: 'none'
+
+version: 0.0.1+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: ^3.1.0
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  audioplayers: ^5.1.0
   cupertino_icons: ^1.0.2
+  go_router: ^12.0.0
+  logging: ^1.1.0
+  provider: ^6.0.2
+  shared_preferences: ^2.0.13
+
+  # If you don't need one of the following dependencies,
+  # delete the relevant line below, and get rid of any Dart code
+  # that references the dependency.
+  firebase_core: ^2.1.1  # Needed for Crashlytics below
+  firebase_crashlytics: ^3.3.5  # Error reporting
+  games_services: ^3.0.0  # Achievements and leaderboards
+  google_mobile_ads: ^3.0.0  # Ads
+  in_app_purchase: ^3.0.1  # In-app purchases
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  flutter_launcher_icons: ^0.13.0
+  test: ^1.19.0
 
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add Flutter specific assets to your application, add an assets section,
-  # like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/music/
+    - assets/sfx/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add Flutter specific custom fonts to your application, add a fonts
-  # section here, in this "flutter" section. Each entry in this list should
-  # have a "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
-
+  fonts:
+    - family: Permanent Marker
+      fonts:
+        - asset: assets/Permanent_Marker/PermanentMarker-Regular.ttf
 
   # This section identifies your Flutter project as a module meant for
   # embedding in a native host app.  These identifiers should _not_ ordinarily
@@ -85,3 +59,10 @@ flutter:
     androidX: true
     androidPackage: com.example.my_flutter
     iosBundleIdentifier: com.example.myFlutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon-adaptive-foreground.png"
